# firmare-servos

./: .gdbinit  .gitignore  Cargo.toml  README.md  debug.sh  rust-toolchain
.cargo/: config
examples/: blinky.rs  old-generics.rs  old-one-task.rs
src/: main.rs  robot.rs
