[package]
authors = ["Lee Lup Yuen <luppy@appkaki.com>, Paul Florence <perso@florencepaul.com>"]
categories = ["embedded", "no-std"]
description = "A sample Rust application for STM32 Black Pill microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "bluepill"]
license = "MIT OR Apache-2.0"
name = "stm32-black-pill-rust"
repository = "https://git.florencepaul.com/gbip/black_pill"
version = "0.3.2"
[dependencies]
drs-0x01 = "0.1.7"
embedded-hal = "~0.2.1"
nb = "0.1.1"
librobot = {git = "https://github.com/ClubRobotINSAT/librobot"}
w5500 = "0.1.5"

[dependencies.cortex-m]
version = "0.5.0"

[dependencies.cortex-m-rt]
version = "0.5.0"

[dependencies.cortex-m-semihosting]
version = "0.3.0"

[dependencies.panic-semihosting]
version = "0.5.1"

[dependencies.stm32f103xx]
git = "https://github.com/japaric/stm32f103xx"

[dependencies.stm32f103xx-hal]
git = "https://github.com/japaric/stm32f103xx-hal"

[profile.release]
codegen-units = 1
debug = true
lto = true
